--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>
         Saiteja Reddy
     </h1>
-    <img src="./4.1+Webpages/assets/images/cat.png" height="100">
+    <img src="./cat.png" height="100">
     <hr>
     <ul>
         <li>Education
