--- a/index.html
+++ b/index.html
@@ -1,59 +1,35 @@
 <!DOCTYPE html>
+<html lang="en" data-bs-theme="dark">
+
 <head>
-    <title>
-        My Resume
-    </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Column Layout Methods</title>
+  <link rel="stylesheet" href="index.css.css">
+
 </head>
 <body>
-    <h1>
-        Saiteja Reddy
-    </h1>
-    <img src="./cat.png" height="100">
-    <hr>
-    <ul>
-        <li>Education
-            <ol>
-                <li>
-                    Sri Venkateswara Vidyanikethan school - 9.3CGPA
-                </li>
-                <li>
-                    Sri Vivekanandha Jr. College - 93.5%
-                </li>
-                <li>
-                    Siddharth institute of technology - 8CGPA
-                </li>
-            </ol>
-        </li>
-        <li>
-            Work Experience
-            <ol>
-                <li>
-                    1year experience on web development
-                </li>
-                <li>
-                    Completed a project in web designing
-                </li>
-            </ol>
-        </li>
-        <li>
-            Skills
-            <ol>
-                <li>
-                    HTML
-                </li>
-                <li>
-                    CSS
-                </li>
-                <li>
-                    Java Script
-                </li>
-                <li>
-                    MY SQL
-                </li>
-            </ol>
-        </li>
-    </ul>
-    <footer>
-        <p>@saiteja reddy resume copyright</p>
-    </footer>
+  <div class="container">
+        <li class="layout">Visual Studio Code</li>
+        <li>Docs</li>
+        <li>Updates</li>
+        <li>Blog</li>
+        <li>API</li>
+        <li>Extensions</li>
+        <li>FAQ</li>
+        <li>Github Copilot</li>
+        <li><input type="text" placeholder="Search.."></li>
+        <li id="download"><button type="button" class="button">Download</button></li>
+  </div>
+  <div class="main">
+    <h1 class="hero">Your code editor. <br>Redefined with AI.</h1>
+  </div>
+  <div class="buttons dlink">
+  <button type="button">Download for MAcOS</button>&nbsp;&nbsp;
+  <button type="button">Try Copilot Free</button>
+</div>
+<div>
+    <img class="img"  src="./clone.png.png"  alt="VS code homeage" width="900" height="500" >
+</div>
+<footer class="footer">Copyrights Reserved</footer>
 </body>
